Fixed some points